# Angry-Birds-Replica

./: CMakeLists.txt  Documentation_ Angry_Birds.docx  README.md
src/: Audio.cpp  Audio.h  Bird.cpp  Bird.h  Effect.cpp  Effect.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  Menu.cpp  Menu.h  Obstacle.cpp  Obstacle.h  Pig.cpp  Pig.h  main.cpp
