cmake_minimum_required(VERSION 3.14)
project(AngryBirdsSFML)

set(CMAKE_CXX_STANDARD 14)

if(WIN32)
    set(SFML_STATIC_LIBRARIES TRUE)
    set(CMAKE_EXE_LINKER_FLAGS "-static")
endif()


find_package(SFML 2.5.1 COMPONENTS system window graphics network audio)
set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h src/Level.cpp src/Level.h src/Vector2.cpp src/Vector2.h src/Bird.cpp src/Bird.h src/Pig.cpp src/Pig.h src/Menu.cpp src/Menu.h src/Effect.cpp src/Effect.h src/GameObject.cpp src/GameObject.h src/Obstacle.cpp src/Obstacle.h src/Audio.cpp src/Audio.h)
add_executable(AngryBirdsSFML ${SOURCE_FILES})

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")

target_link_libraries (AngryBirdsSFML sfml-graphics sfml-window sfml-system sfml-network sfml-audio)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Data/)